--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$font-family: 'Open Sans', sans-serif;
+$font-family: 'Roboto', sans-serif;
 $font-family-alt: $font-family;
 $font-family-validation: $font-family;
 $font-family-headings: $font-family;
