--- a/scss/index.scss
+++ b/scss/index.scss
@@ -37,5 +37,6 @@ body{padding: 0;}
 
 //layouts
 //@import "layouts/header";
-@import "layouts/test";
+@import "layouts/header";
+@import "layouts/footer";
 
