--- a/scss/index.scss
+++ b/scss/index.scss
@@ -39,4 +39,5 @@ body{padding: 0;}
 //@import "layouts/header";
 @import "layouts/header";
 @import "layouts/footer";
+@import "layouts/test-block";
 
