--- a/scss/base.scss
+++ b/scss/base.scss
@@ -157,3 +157,7 @@ html[data-useragent*='MSIE 10.0'] {
   overflow-y: hidden;
   overflow-x: auto;
 }
+.link {
+  display: inline-block;
+  margin-bottom: 20px;
+}
