--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,5 +1,26 @@
 header {
   background-color: #222;
-  padding: 10px 0;
+  padding: 16px 0;
   color: #fff;
+}
+.nav {
+  @include flexbox;
+  @include align-items(center);
+  @include justify-content(flex-start);
+  @include list-reset(0);
+  li {
+    margin-right: 20px;
+    &:last-child {
+      margin-right: 0;
+    }
+    &.active {
+      a {
+        text-decoration: underline;
+      }
+    }
+
+  }
+  a {
+    text-decoration: none;
+  }
 }
