--- a/style/base.css
+++ b/style/base.css
@@ -74,37 +74,37 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 h1, .h1 {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 36px;
 }
 
 h2, .h2 {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 34px;
 }
 
 h3, .h3 {
-  margin-bottom: 48px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 31px;
 }
 
 h4, .h4 {
-  margin-bottom: 46px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 28px;
 }
 
 h5, .h5 {
-  margin-bottom: 44px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 26px;
 }
 
 h6, .h6 {
-  margin-bottom: 42px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 24px;
 }
@@ -219,4 +219,9 @@ html[data-useragent*='MSIE 10.0'] .attention {
 .overflow-wrap {
   overflow-y: hidden;
   overflow-x: auto;
+}
+
+.link {
+  display: inline-block;
+  margin-bottom: 20px;
 }
