--- a/style/index.css
+++ b/style/index.css
@@ -123,12 +123,53 @@ body {
 
 header {
   background-color: #222;
-  padding: 10px 0;
+  padding: 16px 0;
   color: #fff;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: flex-start;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.nav li {
+  line-height: 1;
+  margin: 0;
+  padding: 0;
+}
+.nav li {
+  margin-right: 20px;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
+.nav li.active a {
+  text-decoration: underline;
+}
+.nav a {
+  text-decoration: none;
 }
 
 footer {
   padding: 10px 0;
   background-color: #222;
   color: #fff;
+}
+
+.canvas-wrap canvas {
+  width: 100%;
 }
